--- a/style.css
+++ b/style.css
@@ -10,28 +10,17 @@
 
 /*CABEÇALHO DA PÁGINA*/
 .topo {
-  background-color: #111;
-  color: white;
-  border-bottom: 7px solid #414141;
-}
-
-.logo {
-  font-size: 20px;
-  font-weight: bold;
-  margin: 0;
-}
-
-#topo {
   position: fixed;
   top: 0;
-  left: 0;
   width: 100%;
   z-index: 1000; /* para ficar acima de tudo */
   height: 15%;
-  background-color: #111; /* ou a cor que estiver usando */
+  background-color: #111;
+  border-bottom: 3px solid #414141;
+  box-shadow: #111 0px 1px 10px;
 }
 
-/*ESTILO DO MENU HAMBURGUER*/
+
 .menu ul {
   list-style: none;
   margin: 0;
