--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
   border-radius: 5px;
 }
 
-/*ESTILO DO MENU HAMBURGUER*/
+/*ESTILO DO MENU HAMBURGUER*/c 
 .menu-toggle {
   display: none;
   background: none;
