--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
   font-family: 'Segoe UI', sans-serif;
   background-color: #fefae0;
   color: #333;
+  padding-top: 80px;
 }
-
 
 .container {
   max-width: 1100px;
@@ -107,10 +107,6 @@ html {
 }
 
 /* CARROSSEL FUNCIONAL */
-.carousel {
-  padding-top: 7%;
-}
-
 .carousel-container {
   width: 90%;
   max-width: 800px;
